1.2.13.dev0
 * #100: Support for --stats command-line flag independent of --verbosity.

1.2.12
 * #110: Support for Borg repository initialization via borgmatic --init command-line flag.
 * #111: Update Borg create --filter values so a dry run lists files to back up.
 * #113: Update README with link to a new/forked Docker image.
 * Prevent deprecated --excludes command-line option from being used.
 * Refactor README a bit to flow better for first-time users.
 * Update README with a few additional borgmatic packages (Debian and Ubuntu).

1.2.11
 * #108: Support for Borg create --progress via borgmatic command-line flag.

1.2.10
 * #105: Support for Borg --chunker-params create option via "chunker_params" in borgmatic's storage
   section.

1.2.9
 * #102: Fix for syntax error that occurred in Python 3.5 and below.
 * Make automated tests support running in Python 3.5.

1.2.8
 * #73: Enable consistency checks for only certain repositories via "check_repositories" option in
   borgmatic's consistency configuration. Handy for large repositories that take forever to check.
 * Include link to issue tracker within various command output.
 * Run continuous integration tests on a matrix of Python and Borg versions.

1.2.7
 * #98: Support for Borg --keep-secondly prune option.
 * Use Black code formatter and Flake8 code checker as part of running automated tests.
 * Add an end-to-end automated test that actually integrates with Borg.
 * Set up continuous integration for borgmatic automated tests on projects.evoworx.org.

1.2.6
 * Fix generated configuration to also include a "keep_daily" value so pruning works out of the
   box.

1.2.5
 * #57: When generating sample configuration with generate-borgmatic-config, comment out all
   optional configuration so as to streamline the initial configuration process.

1.2.4
 * Fix for archive checking traceback due to parameter mismatch.

1.2.3