@@ -15,9 +15,17 @@ def initialize_repository(
 ):
     '''
     Given a local or remote repository path, a Borg encryption mode, whether the repository should
-    be append-only, and the storage quota to use, initialize the repository.
+    be append-only, and the storage quota to use, initialize the repository. If the repository
+    already exists, then log and skip initialization.
     '''
-    full_command = (
+    info_command = (local_path, 'info', repository)
+    logger.debug(' '.join(info_command))
+
+    if subprocess.call(info_command, stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL) == 0:
+        logger.info('Repository already exists. Skipping initialization.')
+        return
+
+    init_command = (
         (local_path, 'init', repository)
         + (('--encryption', encryption_mode) if encryption_mode else ())
         + (('--append-only',) if append_only else ())
@@ -27,5 +35,5 @@ def initialize_repository(
         + (('--remote-path', remote_path) if remote_path else ())
     )
 
-    logger.debug(' '.join(full_command))
-    subprocess.check_call(full_command)
+    logger.debug(' '.join(init_command))
+    subprocess.check_call(init_command)
